// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly if there are new features, and the user has not opted out 1`] = `
<Fragment>
  <li
    className="navbar-latest-notification"
  >
    <div
      className="navbar-latest-notification-wrapper"
    >
      <span
        className="badge"
      >
        new
      </span>
      <span
        className="label"
      >
        10 Java rules, Github checks, Security Hotspots, BitBucket branch decoration
      </span>
      <a
        className="navbar-icon"
        href="#"
        onClick={[Function]}
      >
        <ClearIcon
          fill="#8a8c8f"
          size={10}
        />
      </a>
    </div>
  </li>
  <li>
    <a
      className="navbar-icon"
    >
      <NotificationIcon
        hasUnread={true}
      />
    </a>
  </li>
</Fragment>
`;

exports[`should render correctly if there are new features, but the user has opted out 1`] = `
<Fragment>
  <li>
    <a
      className="navbar-icon"
    >
      <NotificationIcon
        hasUnread={false}
      />
    </a>
  </li>
</Fragment>
`;

exports[`should render correctly if there are no new features 1`] = `
<Fragment>
  <li>
    <a
      className="navbar-icon"
    >
      <NotificationIcon
        hasUnread={false}
      />
    </a>
  </li>
</Fragment>
`;

exports[`should render correctly if there are no new unread features 1`] = `
<Fragment>
  <li>
    <a
      className="navbar-icon"
    >
      <NotificationIcon
        hasUnread={false}
      />
    </a>
  </li>
</Fragment>
`;
